--- a/cafe-main-client/package.json
+++ b/cafe-main-client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26"
   }
 }
