--- a/cafe-main-client/package.json
+++ b/cafe-main-client/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
+    "browser-image-compression": "^2.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
