Handled profile settings

--- a/cafe-main-client/package.json
+++ b/cafe-main-client/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.13.1",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26"
   }
