--- a/cafe-main-client/package.json
+++ b/cafe-main-client/package.json
@@ -16,6 +16,7 @@
     "browser-image-compression": "^2.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
@@ -24,6 +25,7 @@
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
+    "save": "^2.9.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-modal": "^3.13.1",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26"
